# fastagent

./: .gitignore  .ruff.toml  Makefile  README.md  dagger.json  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: backend-ci.yml  ci.yml  dagger.yml
backend/: Dockerfile  dagger.json  pyproject.toml
backend/app/: main.py
backend/app/internal/agent/: __init__.py  service.py
backend/app/internal/data/: database.py  tokens.py  users.py
backend/app/internal/security/: password.py
backend/app/internal/server/: dependencies.py  middlewares.py
backend/app/internal/services/: __init__.py  agent_service.py
backend/app/internal/settings/: __init__.py  settings.py
backend/app/routers/: agents.py  tokens.py
backend/dagger/src/main/: __init__.py
backend/tests/: test_handlers.py  test_middlewares.py
dagger/src/main/: __init__.py
frontend/: .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.flox/: env.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatInterface.tsx  Icons.tsx  MessageInput.tsx  Sidebar.tsx
frontend/src/components/custom/: AppSidebar.tsx  ChatContainer.tsx  ChatLayout.tsx  MessageInput.tsx
frontend/src/services/: messageService.ts
frontend/src/types/: message.ts
src/fastagent/: app.py  cli.py  configuration.py  dependencies.py  server.py
src/fastagent/integrations/: __init__.py  langchain.py
src/fastagent/internal/: __init__.py  log.py  module.py  settings.py
src/fastagent/internal/data/: __init__.py  database.py  tokens.py  users.py
src/fastagent/internal/security/: __init__.py
src/fastagent/internal/server/: __init__.py  context.py  middlewares.py  server.py
src/fastagent/internal/services/: __init__.py
src/fastagent/routers/: agents.py  healthcheck.py  tokens.py  users.py
tests/: test_handlers.py  test_middlewares.py
