[project]
name = "fastagent"
version = "0.1.0"
description = "An API."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi>=0.115.4",
  "granian>=1.6.3",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.6.1",
  "uvloop>=0.21.0",
  "toml>=0.10.2",
]

[project.optional-dependencies]
all = [
  "asyncpg>=0.30.0",
  "langserve[server]>=0.3.0",
  "typer>=0.13.0",
  "questionary>=2.0.1",
  "granian[reload]>=1.6.3",
]
cli = ["typer>=0.13.0", "questionary>=2.0.1", "granian[reload]>=1.6.3"]
postgres = ["asyncpg>=0.30.0"]
langchain = ["langserve[server]>=0.3.0"]

[dependency-groups]
dev = ["pytest>=8.3.3"]

[project.scripts]
fastagent = "fastagent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
